# helanfxz-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  commerce_style_templates.py  docker-compose.yml  pyproject.toml  start.bat  start.sh  task_creation_demo_app.py  video_task_module.py  电商场景AIGC带货视频生成系统 - AI全栈挑战赛课题.md
agent/: __init__.py  asset_preprocessor.py  content_repair.py  final_checks.py  prompt_safety.py  prompt_skill_contracts.py  requirement_structurer.py  seedance_video_renderer.py  simple_video_renderer.py  value_proof_planner.py  video_generation_workflow.py
docs/: modules.md  task_creation_demo_module.md  video_generation_workflow.md  video_preview_rendering.md  video_task_module.md  关键问题和解决方案.md
docs/submission/: README.md  api_reference.md  demo_script.md  evaluation_plan.md  final_submission.md  submission_checklist.md  system_architecture.md  technical_story.md
prompt_skill_library/: README.md
prompt_skill_library/commerce_scene/: material_action_proof.md  new_scene_result.md  source_confirm.md
prompt_skill_library/new_scene_text_reconstruction/: backpack_side_pocket_commute.md
prompt_skill_library/shared/: anti_patterns.md  commerce_expression_strategies.md  failure_labels.md  prompt_block_spec.md  scoring_rubric.md
prompt_skill_library/source_scene_extension/: hand_pickup_from_source_scene.md  (+3 more)
tests/: test_identity_workflow.py  test_material_aware_refactoring.py  test_prompt_safety.py  test_prompt_skill_contracts.py  test_seedance_renderer_contracts.py  test_value_proof_planner.py  test_workflow_modules.py
