[project]
name = "aigc-video-system"
version = "0.1.0"
description = "AIGC ecommerce video generation system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111,<1.0",
    "imageio>=2.34,<3.0",
    "imageio-ffmpeg>=0.5,<1.0",
    "numpy>=1.26,<3.0",
    "pillow>=10.3,<12.0",
    "pydantic>=2.7,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "rembg>=2.0,<3.0",
    "onnxruntime>=1.18,<2.0",
    "uvicorn>=0.30,<1.0",
]

[tool.setuptools]
py-modules = ["task_creation_demo_app", "video_task_module"]
packages = ["agent"]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.2,<9.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
